static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Pangolin&family=Roboto+Condensed&display=swap');

/* General Font Styling */
body, h3, h4, h5, h6, p, span, a, button {
    font-family: 'Roboto Condensed', sans-serif;
}

h1, h2, .logo {
    font-family: 'Pangolin', cursive;
}

h3, h4, h5, h6, {
    font-weight: 800;
}

/* General Sizing Styling*/

.mh-70vh {
    /* This pushes the footer down in html documents with little code*/
    min-height: 70vh;
}

/* General Color Styling */

.bg-terracota {
    background-color: #ECBA82;
}

.text-dark-green {
    color: #204E4A;
}

.bg-dark-green {
    background-color: #204E4A;
    color: #fff;
}

.text-light-green {
    color: #81C14B;
}

.bg-light-green {
    background-color: #81C14B;
}

/* Hero Image */

.hero-image {
    background:url('https://res.cloudinary.com/anabramos/image/upload/v1652251788/static/images/vadim-kaipov-8ZELrodSvTc-unsplash_1_xbsah5.jpg') no-repeat center center;
    background-position: center;
    min-height: 70vh;
    position: relative;
}

/* Social Icons Styling */

.social-icons {
    font-size:larger;
}

.social-link {
    text-decoration: none;
    color: inherit;
} 

.social-link:hover, .social-link:focus, .social-link:active {
    text-decoration: none;
    color: #ECBA82;
}

/* Buttons */

#backToTopBtn {
    border: none;
    border-radius: 50%;
    font-size: 16px;
    line-height: 48px;
    width: 54px;
}

.btn-green {
    background-color: #204E4A;
    color: #fff ;
    border-color: #204E4A;
}

.btn-green:hover {
    color: #ECBA82;
    text-decoration: none;
}

.btn-white {
    background-color: #fff;
    color: #204E4A;
    text-decoration: none;
    border-color: #204E4A;
    border-radius: 0.3rem;
}


.btn-white:hover {
    background-color: #ECBA82;
    text-decoration: none;
}

.btn-delete {
    color: red;
    background-color: #fff;
    font-weight: bold;
    border: none;
    border-radius: 50%;
}

/* Anchor links */

.link-unstyled, .link-unstyled:link, .link-unstyled:hover {
    text-decoration: inherit;
}

a {
    text-decoration: none;
}

.nav-link-header:hover {
    color:#204E4A;
    text-decoration: underline !important;
}

/* Allauth Elements Style */

.allauth-inner-content button,
.allauth-inner-content input[type='submit'] {
    font-family: 'Roboto Condensed', sans-serif;
    background-color: #fff;
    color: #204E4A;
    text-decoration: none;
    border-color: #204E4A;
    border-radius: 0.3rem;
}

.allauth-inner-content button:hover,
.allauth-inner-content input[type='submit']:hover {	
    background-color: #ECBA82;
    text-decoration: none;
}

.allauth-inner-content a,
.form-check-label a {
	color: inherit;
    text-decoration: none;
}

.allauth-inner-content a:hover,
.form-check-label a:hover {
    color: inherit;
    text-decoration: underline;
}

/* Bootstrap Toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}


/* For screen sizes from 905px wide or smaller*/
@media screen and (max-width: 905px){
    .responsive-font {
        font-size: 1.1rem;
    }
}


/* For screen sizes from 768px wide or smaller*/
@media screen and (max-width: 768px){
    .responsive-font {
        font-size: 1.0rem;
    }

    .hero-image {
        min-height: 30vh;
    }
}


/* For screen sizes from 480px wide or smaller*/
@media screen and (max-width: 480px) {
    .responsive-font {
        font-size: 0.8rem;
    }

    h5 {
        font-size: 1.0rem;
    }

    .logo {
        font-size: 1.4rem;
    }
}

